<resources>
    <string name="app_name">Moviezz</string>

    <string name="menu_item_top">Top</string>
    <string name="menu_item_movies">Movies</string>
    <string name="menu_item_actors">Actors</string>
    <string name="menu_item_collections">Collections</string>
    <string name="menu_item_calendar">Calendar</string>
    <string name="menu_item_about">About</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="err_msg_no_trailers">Sorry, trailers of this film is unavailable</string>
    <string name="err_msg_no_images">Sorry, images and posters of this movie is unavailable</string>
    <string name="err_msg_no_cast">Sorry, information about actors and crew of this film is unavailable</string>

    <!--Error messages-->



</resources>
