<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
        <group android:checkableBehavior="single">
                <item
                    android:checked="true"
                    android:id="@+id/menuItemTop"
                    android:icon="@drawable/ic_trophy_award_black_18dp"
                    android:title="@string/menu_item_top"/>
                <item
                    android:id="@+id/menuItemMovies"
                    android:icon="@drawable/ic_movie_black_18dp"
                    android:title="@string/menu_item_movies"/>
                <item
                    android:id="@+id/menuItemActors"
                    android:icon="@drawable/ic_human_male_female_black_18dp"
                    android:title="@string/menu_item_actors"/>
                <item
                    android:id="@+id/menuItemCollections"
                    android:icon="@drawable/ic_wunderlist_black_18dp"
                    android:title="@string/menu_item_collections"/>
                <item
                    android:id="@+id/menuItemCalendar"
                    android:icon="@drawable/ic_calendar_clock_black_18dp"
                    android:title="@string/menu_item_calendar"/>
                <item
                    android:id="@+id/menuItemAbout"
                    android:icon="@drawable/ic_information_outline_black_18dp"
                    android:title="@string/menu_item_about" />
        </group>

</menu>